# llm-wiki

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  audit.toml  config.toml  docker-compose.yml  entrypoint.sh
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin/commands/: contradiction.md  help.md  ingest.md  init.md  lint.md  research.md
.claude-plugin/hooks/: hooks.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot.yml  integration.yml  release.yml
code-ref/src/: acp.rs  cli.rs  config.rs  frontmatter.rs  git.rs  graph.rs  ingest.rs  init.rs  lib.rs  links.rs  lint.rs  main.rs  markdown.rs  search.rs  server.rs  spaces.rs
code-ref/tests/: acp.rs  config.rs  frontmatter.rs  graph.rs  ingest.rs  init.rs  links.rs  lint.rs  markdown.rs  mcp.rs  search.rs  spaces.rs
docs/: README.md  conformance-tasks.md  diagrams.md  epistemic-model.md  features.md  focused-llm-wiki-design.md  improvments.md  index-corruption-tasks.md  index.md  ingest-auto-commit.md  ingest-model.md  interlude-roadmap.md  llm-integration.md  logging-tasks.md  note.txt  overview.md  planned-improvements.md  retrieval-model.md  roadmap.md  server-resilience-tasks.md  skills-architecture.md  tasks.md  todo.md  todo.txt  type-specific-frontmatter.md
docs/archive/: acp-workflow-dispatch.md
docs/decisions/: README.md  acp-builder-pattern.md  engine-vs-skills.md  json-schema-validation.md  list-pagination.md  rationalize-specs.md  schema-md-eliminated.md  space-context.md  typed-graph-edges.md  wiki-as-skill-registry.md  wiki-stats.md  wiki-watch.md
docs/design/: README.md  acp-transport.md  analysis.schema.json  asset-ingest.md  claude-plugin.md  context-retrieval.md  design-evolution.md  design.md  epistemic-model.md  ingest.md  page-content.md  repository-layout.md
docs/design-origins/: turboquant-pipeline.md
docs/dev/: architecture.md  contradictions.md  graph.md  ingest.md  lint.md  mcp.md  multi-wiki.md  plugin.md  search.md
docs/guides/: README.md  ci-cd.md  configuration.md  custom-types.md  getting-started.md  graph.md  ide-integration.md  installation.md  lint.md  llms-format.md  release.md  search-ranking.md
docs/implementation/: README.md  acp-sdk.md  acp-server.md  engine.md  graph-cache.md  index-manager.md  lock-patterns.md  manager-pattern.md  mcp-server.md  mcp-tool-pattern.md  petgraph-live.md  rust.md  schema-change-detection.md  tantivy.md  type-registry.md
docs/improvements/: 2026-05-03-petgraph-live-algorithms.md  2026-05-03-petgraph-live-cache.md  2026-05-03-petgraph-live-snapshot.md  2026-05-03-rest-api-design.md  README.md  backlinks.md  claims-confidence-float.md  community-detection.md  confidence.md  cross-wiki-links.md  crystallize.md  design-configurable-wiki-root.md  design-spaces-register-remote.md  export.md  incremental-validation.md  ingest-two-step.md  lint.md  redaction.md  review-skill.md  search-ranking-custom-status.md  search-ranking.md
docs/prompts/: create-llm-wiki-hugo-cms.md  create-llm-wiki-skills.md  impl-phase1.md  phase-1.md  phase-3.md  phase-4.md  phase-5.md  phase-7.md  phase-8.md  plan-phase2.md  plan-phase3.md  rationalize-specs.md  refactor-slug-sort.md  study-acp-0.11.md  study-acp-rmcp.md  study-cross-wiki-links.md  study-hot-reload.md  study-page-body-templates.md  study-rmcp-upgrade.md  study-search-facets.md  study-semantic-search.md  study-wiki-diff.md  study-wiki-history.md  study-wiki-stats.md  study-wiki-suggest.md  study-wiki-watch.md  upgrade-acp.md  upgrade-rmcp.md  v0.2.0-release-process.md
docs/specifications/: README.md  features.md  overview.md  rust-modules.md
docs/tasks/: instruct-update.md  phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md  (+2 more)
schemas/: concept.json  context.json  daily_summary.json  engagement.json  episode.json  event.json  identity.json  initiative.json  lesson.json  main.json  messaging.json  paper.json  paper.md  preference.json  project.json  relationship.json  routine.json  skill.json  task_context.json
src/: acp.rs  cli.rs  config.rs  context.rs  default_schemas.rs  engine.rs  frontmatter.rs  git.rs  graph.rs  index_manager.rs  index_schema.rs  indexing.rs  ingest.rs  init.rs  instructions.md  integrate.rs  lib.rs  links.rs  lint.rs  main.rs  markdown.rs  ops.rs  search.rs  server.rs  slug.rs  space_builder.rs  spaces.rs  type_registry.rs  watch.rs
src-beta/: analysis.rs  cli.rs  context.rs  contradiction.rs  git.rs  graph.rs  ingest.rs  integrate.rs  lib.rs  lint.rs  main.rs  markdown.rs  registry.rs  search.rs  server.rs
tests/: acp.rs  config.rs  default_schemas.rs  engine.rs  frontmatter.rs  git.rs  graph.rs  graph_cache.rs  graph_snapshot.rs  index_manager.rs  index_schema.rs  indexing.rs  ingest.rs  init.rs  integration_test.rs  links.rs  lint.rs  markdown.rs  mcp.rs  ops.rs  registry.rs  schema.rs  schema_integration.rs  search.rs  slug.rs  spaces.rs  type_registry.rs
tests-beta/: graph.rs  ingest.rs  mcp.rs  plugin.rs  search.rs
tests-integration/: .gitignore  Makefile  conftest.py  pyproject.toml
tests-integration/acp/: conftest.py  test_graph.py  test_help.py  test_ingest.py  test_lifecycle.py  test_lint.py  test_research.py  test_session_cap.py  test_use.py
tests-integration/engine/: test_confidence.py  test_config.py  test_content.py  test_export.py  test_graph.py  test_history.py  test_incremental.py  test_index.py  test_ingest.py  test_lint.py  test_list.py  test_logs.py  test_schema.py  test_search.py  test_spaces.py  test_stats.py  test_suggest.py
tests-integration/mcp/: conftest.py  test_content.py  test_export.py  test_graph.py  test_index.py  test_ingest.py  test_lint.py  test_negative.py  test_schema_history.py  test_search.py  test_spaces.py  test_stats.py  test_structural.py  test_suggest.py
(+258 files in other folders)
