[package]
name = "llm-wiki"
version = "0.1.0"
edition = "2021"
description = "Git-backed wiki engine with MCP server — bring your own LLM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geronimo-iia/llm-wiki"
readme = "README.md"

[lib]
name = "llm_wiki"
path = "src/lib.rs"

[[bin]]
name = "wiki"
path = "src/main.rs"

[dependencies]
# CLI
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio      = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml       = "0.8"
schemars   = { version = "0.8", features = ["preserve_order"] }

# Markdown / frontmatter
comrak     = "0.28"

# Full-text search
tantivy    = "0.22"

# Graph
petgraph   = "0.6"

# Filesystem traversal
walkdir    = "2"

# Date/time
chrono     = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Git
git2       = "0.19"

# MCP server
rmcp       = { version = "0.1", features = ["server", "transport-io", "transport-sse-server", "macros"] }

[dev-dependencies]
tempfile   = "3"

[profile.release]
opt-level      = 3
lto            = true
codegen-units  = 1
strip          = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ target }.tar.gz"
bin-dir = "wiki"
