[project]
name = "llm-wiki-integration-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mcp>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.pytest.ini_options]
addopts =" --basetemp=/tmp/llm-wiki-tests"
testpaths = ["."]
asyncio_mode = "auto"
tmp_path_retention_count = 1
tmp_path_retention_policy = "failed"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/conftest.py" = ["F401"]
